# ML-CNN-RNN

./: .gitignore  README.md  TASK_ASSIGNMENTS.md  main.py  pyproject.toml
outputs/: cnn_shared_vs_nonshared.json  cnn_sweep_results.json  init_inject_results.json  max_len_sweep.json  qualitative_examples.json  rnn_lstm_keras_eval.json  rnn_lstm_keras_vs_scratch.json
scripts/: inspect_nb.py  run_notebook.py
src/cnn/: __init__.py  conv2d.py  flatten.py  gradcam.py  layers.py  locally_connected.py  locally_connected_keras.py  model.py  pooling.py  scratch_model.py  train.py
src/notebooks/: notebook.ipynb
src/rnn_lstm/: __init__.py  beam_search.py  caption_preprocessing.py  decoder.py  embedding.py  evaluate.py  lstm.py  metrics.py  model.py  model_init_inject.py  rnn.py  train.py
src/shared/: __init__.py  activations.py  dense_layer.py  image_utils.py
tests/: test_rnn_lstm_scratch.py  test_rnn_lstm_task_contracts.py
