[project]
name = "ml-cnn-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evaluate>=0.4.6",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]
